<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/jpeg_test"
        android:contentDescription="@string/head_image"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorName"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/author_name"
        android:textColor="@color/white"
        android:textSize="@dimen/add_to_shopping_list"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/author_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menuRecipe"
        style="@style/Widget.AppTheme.MenuCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <TextView
        android:id="@+id/nameRecipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/name_recipe"
        android:text="@string/name_recipe"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/containedButtonCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierStep"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="nameRecipe,authorName,containedButtonCategory"/>

</androidx.constraintlayout.widget.ConstraintLayout>