<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/jpeg_test"
        android:contentDescription="@string/head_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/author_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/author_name"
        android:textColor="@color/white"
        android:textSize="@dimen/add_to_shopping_list"
        tools:ignore="MissingConstraints,SpUsage"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        tools:text="@string/author_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.MenuCheckbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:contentDescription="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:checked="true" />

    <TextView
        android:id="@+id/name_recipes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/name_recipes"
        android:text="@string/name_recipes"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/containedButtonCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/name_recipes"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/header_ingredients"
        android:textSize="@dimen/ingredients"
        app:layout_constraintTop_toBottomOf="@id/name_recipes"
        tools:ignore="SpUsage"
        tools:text="@string/header_ingredients" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/basket_button"
        style="@style/Widget.AppTheme.BasketCheckbox"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:checkable="true"
        android:contentDescription="@string/basket_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_recipes"
        tools:checked="true"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_basket_button"
        style="@style/Widget.AppTheme.addBasketCheckbox"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:checkable="true"
        android:contentDescription="@string/add_basket_button"
        app:layout_constraintTop_toBottomOf="@id/ingredients"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/text_add_to_shopping_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/add_to_shopping_list"
        android:textSize="@dimen/add_to_shopping_list"
        app:layout_constraintBottom_toBottomOf="@id/add_basket_button"
        app:layout_constraintStart_toEndOf="@id/add_basket_button"
        tools:ignore="SpUsage"
        tools:text="@string/add_to_shopping_list" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_add_to_shopping_List"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:constraint_referenced_ids="add_basket_button,text_add_to_shopping_list" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:layout_constraintTop_toBottomOf="@id/group_add_to_shopping_List" />

    <ImageView
        android:id="@+id/add_ingredients"
        style="@style/Widget.AppTheme.AddIngredientsCheckbox"
        android:layout_width="24dp"
        android:layout_height="24dp"
        app:layout_constraintTop_toBottomOf="@id/group_add_to_shopping_List"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>