<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/grey"
            android:contentDescription="@string/uri"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/text_choose_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:text="@string/choose_a_category"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:entries="@array/categories"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_choose_category" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addNameRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="100dp"
            android:background="@color/grey"
            android:inputType="textMultiLine"
            android:textSize="18sp"
            android:textStyle="italic"
            tools:text="@string/name_recipe"
            android:contentDescription = "@string/name_recipe"
            app:layout_constraintTop_toBottomOf="@id/category" />

        <TextView
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/header_ingredients"
            android:text="@string/header_ingredients"
            android:textSize="@dimen/ingredients"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@id/addNameRecipe"
            tools:ignore="SpUsage"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/addTextIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:background="@color/grey"
            android:textStyle="italic"
            android:contentDescription="@string/add_text_ingredients"
            android:textSize="@dimen/text_margin"
            app:layout_constraintTop_toBottomOf="@id/ingredients"
            tools:ignore="SpUsage"
            tools:text="@string/list_ingredients" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/contentEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:background="@color/grey"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@+id/addTextIngredients"
            tools:ignore="MissingConstraints" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="?android:attr/windowBackground"
            android:contentDescription="@string/saveButton"
            app:backgroundTint="@color/red"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentEditText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <Button
            android:id="@+id/buttonAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="add image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="66dp" />

<!--        <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--            android:id="@+id/bottom_navigation_bar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="start"-->
<!--            android:background="?android:attr/windowBackground"-->
<!--            app:backgroundTint="@color/red"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:menu="@menu/bottom_navigation_bar" />-->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>